[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crmLibrary"
version = "1.3.2"
authors = [
  { name="olmax04", email="olmax04developer@gmail.com" },
]
description = "Library for KommoCRM(AmoCRM) by olmax04"
readme = "README.md"
requires-python = ">=3.8.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/olmax04/crmLibrary"
"Bug Tracker" = "https://github.com/olmax04/crmLibrary/issues"